--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,18 @@
+apply plugin: 'java'
+apply plugin: 'eclipse'
+apply plugin: 'checkstyle'
+
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+
+ testCompile(group: 'junit', name: 'junit', version: '4.10')
+
+}
+
 task wrapper(type: Wrapper) {
     gradleVersion = '1.1'
 }
