--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,9 @@ apply plugin: 'checkstyle'
 repositories {
     mavenCentral()
 }
-
+checkstyle {
+	ignoreFailures true
+}
 dependencies {
 
  testCompile(group: 'junit', name: 'junit', version: '4.10')
