--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         mavenLocal()
     } 
     dependencies {
-        classpath 'com.breskeby:GradleSite:0.1-SNAPSHOT'
+       // classpath 'com.breskeby:GradleSite:0.1-SNAPSHOT'
     } 
 }
 
