--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ subprojects {
 //	}
 
     group = 'org.pmckit'
-    version = '0.1'
+    version = '0.1-SNAPSHOT'
     repositories {
         mavenCentral()
     }
